--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
-	"name": "project",
+	"name": "components",
+	"files": [
+		"dist"
+	],
+	"exports": {
+		"./Button.svelte": {
+			"types": "./dist/Button.svelte.d.ts",
+			"svelte": "./dist/Button.svelte"
+		}
+	},
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -13,8 +22,9 @@
 		"openapi": "npx openapi-typescript https://api.project.sk/yaml --output openapi.d.ts"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/package": "^2.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -22,7 +32,6 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
-		"openapi-typescript": "^6.2.4",
 		"postcss": "^8.4.24",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
@@ -37,7 +46,7 @@
 	"dependencies": {
 		"@sentry/sveltekit": "^7.55.2",
 		"dayjs": "^1.11.8",
-		"openapi-fetch": "^0.2.1",
-		"svelte-portal": "^2.2.0"
+		"svelte-portal": "^2.2.0",
+		"svelte": "^3.57.0"
 	}
 }
