--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"openapi": "npx openapi-typescript https://api.project.sk/yaml --output openapi.d.ts"
+		"package": "svelte-package"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.1.0",
