--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
 		"./Dialog.svelte": {
 			"types": "./dist/Dialog.svelte.d.ts",
 			"svelte": "./dist/Dialog.svelte"
+		},
+		"./Select.svelte": {
+			"types": "./dist/Select.svelte.d.ts",
+			"svelte": "./dist/Select.svelte"
 		}
 	},
 	"version": "0.0.1",
